Changes for 2.4.1rc1

New features:

Bug fixes:
........S. [ZBX-8815] fixed adding of host groups to the host by discovery action (Sasha)
..F....... [ZBX-8816] removed "clear history & trends" button from template web scenarios (arvids)
..F....... [ZBX-8727] fixed item multiplier value validation to support scientific notation correctly (Krists)
........S. [ZBX-8514] fixed bug where server would turn a passive proxy into a host if the proxy machine is running an agent that is discovered via network discovery (Juris)
..F....... [ZBX-8753] fixed mass update to change host inventory (Sasha)
....I..... [ZBX-8744] fixed database upgrade procedure stopping when upgrade step was failed (Sasha)
........S. [ZBX-8719] optimised value cache requests to better utilise database indexes (wiper)
..F....... [ZBX-8659] fixed graphs in screens not respecting "Show legend" setting when in dynamic mode (Krists)
.......... [ZBX-8679] removed outdated and unused images (Richlv)
..F....... [ZBX-8700] fixed possible SQL error in details of web scenario (Oleg)
...G...... [ZBX-8595] fixed incorrect event message when handling eventlog (dimir)

--------------------------------------------------------------------------------
Changes for 2.4.0

2.4.0rc3 was released as 2.4.0 without any changes

--------------------------------------------------------------------------------
Changes for 2.4.0rc3

New features:
A.F....... [ZBX-1357] updated Polish and Russian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
........S. [ZBX-8734] fixed IPMI pollers not starting properly on the server (asaveljevs)

--------------------------------------------------------------------------------
Changes for 2.4.0rc2

New features:
A.F....... [ZBX-1357] updated Japanese, Polish and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
...G...PS. [ZBX-8724] fixed daemon crash when a runtime control is issued during shutdown (asaveljevs)
